--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "bunx eslint --fix .",
     "set-posts": "bunx tsx src/set-posts.ts",
     "set-labels": "bunx tsx src/set-labels.ts",
+    "clear-reason-types": "bunx tsx src/clear-reason-types.ts",
     "prepare": "bunx husky install"
   },
   "lint-staged": {
